--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,11 +13,9 @@ theme:
   # Define the logo for the top left-hand corner of the screen and collapsible menu
   # logo: material/draw
   # Define the favicon that displays in the tab of the browser
-  favicon: img/os-sketch-thumbnail.png
+  favicon: img/ready-set-research-square-logo-favicon.svg
   # Define the logo for the repository for the top right-hand corner of the screen
-  icon:
-    logo: material/draw
-    repo: fontawesome/brands/github
+  logo: img/ready-set-research-square-logo.svg
   # Define the fonts used on the site
   font:
     # The main font used in header, footer, and all body text
