--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 # Details about the site
 site_name: "Ready, Set, Research!"
 site_url: https://www.readysetresearch.com
-repo_url: https://github.com/OS-Sketch/www.os-sketch.com
+repo_url: https://github.com/ReadyResearchers/www.readysetresearch.com
 copyright: Default
 
 # Definition of the theme
